# LAGRA-Navigation

./: .env.example  .gitignore  CITATION.cff  LICENSE  README.md  install_deps.sh  setup_workspace.sh
src/lagra_core/: package.xml  setup.cfg  setup.py
src/lagra_core/lagra_core/navigation/: nav2_controller.py
src/lagra_core/lagra_core/nodes/: llm_node.py  orchestrator_node.py  vlm_node.py
src/lagra_core/lagra_core/perception/: grounding.py  image_buffer.py
src/lagra_core/lagra_core/rag/: vectordb.py
src/lagra_core/lagra_core/safety/: collision_monitor.py
src/lagra_core/lagra_core/vlm/: blip2.py  clip.py  sam.py
src/nav2_bringup/maps/: custom_map.yaml
src/promzy_nav2_ctrl/: package.xml  setup.cfg  setup.py
src/promzy_nav2_ctrl/launch/: full_system.launch.py  llm_command.launch.py
src/promzy_nav2_ctrl/promzy_nav2_ctrl/: llm_command.py  nav2_test.py  nl_command_pub.py
src/promzy_nav2_ctrl/promzy_nav2_ctrl/config/: places.yaml
src/promzy_nav2_ctrl/test/: test_llm_here.py
src/romr_description/: CMakeLists.txt  package.xml
src/romr_description/launch/: promzy_house.launch.py
src/romr_description/resource/: romr_description
src/romr_description/urdf/: romr_robot.urdf
src/romr_description/worlds/: housepromzy.world
src/slam_toolbox/launch/: promzy_online_async_launch.py
src/turtlebot3_cartographer/launch/: promzy_cartographer.launch.py
src/turtlebot3_navigation2/launch/: promzy_navigation2.launch.py
src/turtlebot3_navigation2/map/: custom_map.pgm
