<?xml version="1.0"?>
<package format="3">
  <name>romr_description</name>
  <version>0.0.1</version>
  <description>ROMR robot description, meshes, gazebo worlds and launch files.</description>
  <maintainer email="you@example.com">You</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
</package>


